--- a/packages/merchant-tablet-ionic/src/assets/i18n/es-ES.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/es-ES.json
@@ -419,6 +419,11 @@
 		"ORDER": "Pedido",
 		"FROM": "Desde"
 	},
+	"ORDER_TYPE": {
+		"TYPE": "Tipo de orden:",
+		"DELIVERY": "Entrega",
+		"TAKEAWAY": "Para llevar"
+	},
 	"TRACK_ORDER_POP_UP": {
 		"CARRIER": "Reparto",
 		"TRACK": "Seguir",
