--- a/packages/merchant-tablet-ionic/src/assets/i18n/he-IL.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/he-IL.json
@@ -419,6 +419,11 @@
 		"ORDER": "להזמין",
 		"FROM": "מ"
 	},
+	"ORDER_TYPE": {
+		"TYPE": ":סוג הזמנה",
+		"DELIVERY": "מְסִירָה",
+		"TAKEAWAY": "להסיר"
+	},
 	"TRACK_ORDER_POP_UP": {
 		"CARRIER": "המוביל",
 		"TRACK": "עקוב אחר",
