--- a/packages/admin-web-angular/src/assets/i18n/he.json
+++ b/packages/admin-web-angular/src/assets/i18n/he.json
@@ -550,7 +550,8 @@
 			"CATEGORY": "קטגוריה",
 			"PRICE": "מחיר",
 			"QUANTITY": "כמות",
-			"CLICK_ON_PRODUCT_IMAGE_TO_INCREASE_AVAILABLE_QUANTITY": "לחץ על Image Product כדי להגדיל את הכמות הזמינה"
+			"CLICK_ON_PRODUCT_IMAGE_TO_INCREASE_AVAILABLE_QUANTITY": "לחץ על Image Product כדי להגדיל את הכמות הזמינה",
+			"AVAILABILITY": "זמינות"
 		},
 		"NEW_PRODUCT_TYPE": "הספק נדרש לפני המכירה",
 		"ADD_PRODUCTS": "הוסף מוצרים",
