feat: admin turn off/on Orders short process

--- a/packages/admin-web-angular/src/assets/i18n/en-US.json
+++ b/packages/admin-web-angular/src/assets/i18n/en-US.json
@@ -424,6 +424,7 @@
 			"LOGO": "Logo",
 			"PHOTO": "Photo",
 			"IS_ACTIVE": "Is Active",
+			"ORDERS_SHORT_PROCESS": "Orders Short Process",
 			"PRODUCTS_MANUFACTURING": "Products Manufacturing",
 			"CARRIER_REQUIRED": "Carrier required",
 			"RIGHT_NOW": "Right now",
