feat: added flag for cash payment (#1136)
* feat: added flag for cash payment

* fix: added cash payment to be true by default

* feat: added cash payment option in settings create merchant

* fix: removed console logs

* fix: console logs

--- a/packages/admin-web-angular/src/assets/i18n/en-US.json
+++ b/packages/admin-web-angular/src/assets/i18n/en-US.json
@@ -275,6 +275,7 @@
 			"PAYMENTS": {
 				"PAYMENTS": "Payments",
 				"ALLOW_ONLINE_PAYMENT": "Allow online payments?",
+				"ALLOW_CASH_PAYMENT": "Allow cash payments?",
 				"STRIPE": {
 					"PAY_BUTTON_TEXT": "Pay Button text",
 					"CURRENCY": "Currency",
