--- a/packages/admin-web-angular/src/assets/i18n/es-ES.json
+++ b/packages/admin-web-angular/src/assets/i18n/es-ES.json
@@ -278,6 +278,7 @@
 			"PAYMENTS": {
 				"PAYMENTS": "Pagos",
 				"ALLOW_ONLINE_PAYMENT": "¿Permitir pagos online?",
+				"ALLOW_CASH_PAYMENT": "¿Permitir pagos en efectivo?",
 				"STRIPE": {
 					"PAY_BUTTON_TEXT": "Texto de botón de pago",
 					"CURRENCY": "Moneda",
