--- a/packages/admin-web-angular/src/assets/i18n/bg.json
+++ b/packages/admin-web-angular/src/assets/i18n/bg.json
@@ -275,6 +275,7 @@
 			"PAYMENTS": {
 				"PAYMENTS": "Плащания",
 				"ALLOW_ONLINE_PAYMENT": "Разрешаване на онлайн плащания?",
+				"ALLOW_CASH_PAYMENT": "Разрешаване на плащане в брой?",
 				"STRIPE": {
 					"PAY_BUTTON_TEXT": "Текст на бутона за плащане",
 					"CURRENCY": "Валута",
