--- a/packages/admin-web-angular/src/assets/i18n/ru-RU.json
+++ b/packages/admin-web-angular/src/assets/i18n/ru-RU.json
@@ -275,6 +275,7 @@
 			"PAYMENTS": {
 				"PAYMENTS": "Плащания",
 				"ALLOW_ONLINE_PAYMENT": "Разрешаване на онлайн плащания?",
+				"ALLOW_CASH_PAYMENT": "Разрешить наличные платежи?",
 				"STRIPE": {
 					"PAY_BUTTON_TEXT": "Текст кнопки оплаты",
 					"CURRENCY": "валюта",
