--- a/packages/admin-web-angular/src/assets/i18n/he.json
+++ b/packages/admin-web-angular/src/assets/i18n/he.json
@@ -551,17 +551,20 @@
 			}
 		},
 		"PRODUCTS_TAB": {
-			"PRODUCTS": "Products",
-			"ADD_PRODUCTS": "Add Products",
-			"DELETE": "Delete",
-			"IMAGE": "Image",
-			"TITLE": "Title",
-			"DESCRIPTION": "Description",
-			"DETAILS": "Details",
-			"CATEGORY": "Category",
-			"PRICE": "Price",
-			"QUANTITY": "Quantity",
-			"CLICK_ON_PRODUCT_IMAGE_TO_INCREASE_AVAILABLE_QUANTITY": "Click on Product Image to increase available quantity"
+			"PRODUCTS": "מוצרים",
+			"ADD_PRODUCTS": "הוסף מוצרים",
+			"DELETE": "מחק",
+			"IMAGE": "תמונה",
+			"TITLE": "כותרת",
+			"DESCRIPTION": "תיאור",
+			"DETAILS": "פרטים",
+			"CATEGORY": "קטגוריה",
+			"PRICE": "מחיר",
+			"QUANTITY": "כמות",
+			"TYPE": "סוּג",
+			"DELIVERY": "מְסִירָה",
+			"TAKEAWAY": "להסיר",
+			"CLICK_ON_PRODUCT_IMAGE_TO_INCREASE_AVAILABLE_QUANTITY": "לחץ על Image Product כדי להגדיל את הכמות הזמינה"
 		},
 		"NEW_PRODUCT_TYPE": "New Type Product",
 		"ADD_PRODUCTS": "Add Products",
