--- a/packages/admin-web-angular/src/assets/i18n/en.json
+++ b/packages/admin-web-angular/src/assets/i18n/en.json
@@ -562,6 +562,9 @@
 			"CATEGORY": "Category",
 			"PRICE": "Price",
 			"QUANTITY": "Quantity",
+			"TYPE": "Type",
+			"DELIVERY": "Delivery",
+			"TAKEAWAY": "Takeaway",
 			"CLICK_ON_PRODUCT_IMAGE_TO_INCREASE_AVAILABLE_QUANTITY": "Click on Product Image to increase available quantity"
 		},
 		"NEW_PRODUCT_TYPE": "New Type Product",
