--- a/packages/admin-web-angular/src/assets/i18n/ru-RU.json
+++ b/packages/admin-web-angular/src/assets/i18n/ru-RU.json
@@ -561,6 +561,9 @@
 			"CATEGORY": "категория",
 			"PRICE": "Цена",
 			"QUANTITY": "Количество",
+			"TYPE": "Тип",
+			"DELIVERY": "Доставка",
+			"TAKEAWAY": "Навынос",
 			"CLICK_ON_PRODUCT_IMAGE_TO_INCREASE_AVAILABLE_QUANTITY": "Нажмите на изображение продукта, чтобы увеличить доступное количество"
 		},
 		"NEW_PRODUCT_TYPE": "Новый тип продукта",
