--- a/packages/admin-web-angular/src/assets/i18n/he-IL.json
+++ b/packages/admin-web-angular/src/assets/i18n/he-IL.json
@@ -887,7 +887,8 @@
 			"Allocation Failed": "ההקצאה נכשלה",
 			"Packaging Failed": "האריזות נכשלו",
 			"LOCATION": "מקום",
-			"TIME": "זמן"
+			"TIME": "זמן",
+			"NAME": "שם"
 		},
 		"EDIT": {
 			"EDIT_CARRIER": "ערוך ספק",
