--- a/packages/admin-web-angular/src/assets/i18n/ru-RU.json
+++ b/packages/admin-web-angular/src/assets/i18n/ru-RU.json
@@ -887,7 +887,8 @@
 			"Allocation Failed": "Не удалось выполнить распределение",
 			"Packaging Failed": "Ошибка упаковки",
 			"LOCATION": "Место нахождения",
-			"TIME": "Ввремя"
+			"TIME": "Ввремя",
+			"NAME": "Имя"
 		},
 		"EDIT": {
 			"EDIT_CARRIER": "Изменить несущую",
