--- a/packages/admin-web-angular/src/assets/i18n/bg-BG.json
+++ b/packages/admin-web-angular/src/assets/i18n/bg-BG.json
@@ -887,7 +887,8 @@
 			"Allocation Failed": "Разпределението не бе успешно",
 			"Packaging Failed": "Опаковането не бе успешно",
 			"LOCATION": "Местоположение",
-			"TIME": "Време"
+			"TIME": "Време",
+			"NAME": "Име"
 		},
 		"EDIT": {
 			"EDIT_CARRIER": "Редактиране на превозвача",
