--- a/packages/admin-web-angular/src/assets/i18n/bg.json
+++ b/packages/admin-web-angular/src/assets/i18n/bg.json
@@ -887,7 +887,8 @@
 			"Allocation Failed": "Allocation Failed",
 			"Packaging Failed": "Packaging Failed",
 			"LOCATION": "Location",
-			"TIME": "Time"
+			"TIME": "Time",
+			"NAME": "Name"
 		},
 		"EDIT": {
 			"EDIT_CARRIER": "Edit Carrier",
