feat: #60 add translations

--- a/packages/merchant-tablet-ionic/src/assets/i18n/en-US.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/en-US.json
@@ -180,7 +180,11 @@
 			"DESCRIPTION": "Description",
 			"SAVE": "Save",
 			"NEXT": "Next",
-			"BACK": "Back"
+			"BACK": "Back",
+			"LANGUAGE": "Language",
+			"ACTIVE": "Active",
+			"IMAGE": "Image",
+			"STATUS": "Status"
 		},
 		"SELECT LANGUAGE": {
 			"USA": "USA",
