--- a/packages/merchant-tablet-ionic/src/assets/i18n/bg-BG.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/bg-BG.json
@@ -168,6 +168,21 @@
 				}
 			}
 		},
+		"PROMOTIONS": {
+			"PROMOTIONS": "Промоции",
+			"BASIC_INFO": "Основна информация",
+			"TITLE": "Заглавие",
+			"ACTIVE_FROM": "Активна от",
+			"ACTIVE_TO": "Активна до",
+			"PURCHASES_COUNT": "Брой покупки",
+			"IS_ACTIVE": "Активна",
+			"SELECT_DATE": "Изберете дата",
+			"DESCRIPTION": "Описание",
+			"SAVE": "Запази",
+			"NEXT": "Нататък",
+			"BACK": "Обратно",
+			"LANGUAGE": "Език"
+		},
 		"SELECT LANGUAGE": {
 			"USA": "САЩ",
 			"ISRAEL": "Израел",
