--- a/packages/merchant-tablet-ionic/src/assets/i18n/he.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/he.json
@@ -168,6 +168,21 @@
 				}
 			}
 		},
+		"PROMOTIONS": {
+			"PROMOTIONS": "מבצעים",
+			"BASIC_INFO": "מידע בסיסי",
+			"TITLE": "כותרת",
+			"ACTIVE_FROM": "פעיל מ-",
+			"ACTIVE_TO": "פעיל ל",
+			"PURCHASES_COUNT": "ספירת רכישות",
+			"IS_ACTIVE": "פעיל",
+			"SELECT_DATE": "בחר תאריך",
+			"DESCRIPTION": "תיאור",
+			"SAVE": "לשמור",
+			"NEXT": "הַבָּא",
+			"BACK": "חזור",
+			"LANGUAGE": "שפה"
+		},
 		"SELECT LANGUAGE": {
 			"USA": "ארה'ב",
 			"ISRAEL": "ישראל",
