--- a/packages/merchant-tablet-ionic/src/assets/i18n/he.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/he.json
@@ -264,6 +264,12 @@
 		"ORDERS": "הזמנות",
 		"NEW_ORDER": "הזמנה חדשה",
 		"PRODUCTS": "מוצרים מובילים",
+		"ARE_YOU_SURE_TO_DELETE": "לְבַטֵל",
+		"REMOVE": "לְהַסִיר",
+		"DELETE": "לִמְחוֹק",
+		"THE_FOLLOWING_DATA": "הנתונים הבאים",
+		"CONFIRM": "לְאַשֵׁר",
+		"CANCEL": "לְבַטֵל",
 		"SELECT_POP_UP": {
 			"SELECT_CATEGORIES": "בחר קטגוריות",
 			"OK": "בסדר",
