--- a/packages/merchant-tablet-ionic/src/assets/i18n/ru.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/ru.json
@@ -264,6 +264,12 @@
 		"ORDERS": "Заказы",
 		"NEW_ORDER": "Новый порядок",
 		"PRODUCTS": "Лучшие продукты",
+		"ARE_YOU_SURE_TO_DELETE": "Вы уверены, что хотите этого",
+		"REMOVE": "Удалять",
+		"DELETE": "Удалить",
+		"THE_FOLLOWING_DATA": "следующие данные",
+		"CONFIRM": "Подтверждение",
+		"CANCEL": "Отмена",
 		"SELECT_POP_UP": {
 			"SELECT_CATEGORIES": "Выбрать категории",
 			"OK": "Хорошо",
