--- a/packages/merchant-tablet-ionic/src/assets/i18n/he-IL.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/he-IL.json
@@ -310,7 +310,8 @@
 			"BULGARIAN": "בולגרית",
 			"OPTIONAL": "אופציונאלי",
 			"TAKEAWAY": "להסיר",
-			"DELIVERY": "משלוח"
+			"DELIVERY": "משלוח",
+			"PRODUCT_AVAILABILITY": "זמינות מוצר"
 		},
 		"NEW_ORDER_VIEW": {
 			"NEW_MANUAL_ORDER": "סדר ידני חדש",
