--- a/packages/merchant-tablet-ionic/src/assets/i18n/ru-RU.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/ru-RU.json
@@ -310,7 +310,8 @@
 			"BULGARIAN": "Болгарский",
 			"OPTIONAL": "необязательный",
 			"TAKEAWAY": "Навынос",
-			"DELIVERY": "Доставка"
+			"DELIVERY": "Доставка",
+			"PRODUCT_AVAILABILITY": "Доступность продукта"
 		},
 		"NEW_ORDER_VIEW": {
 			"NEW_MANUAL_ORDER": "Новый ручной порядок",
