--- a/packages/admin-web-angular/src/assets/i18n/he-IL.json
+++ b/packages/admin-web-angular/src/assets/i18n/he-IL.json
@@ -17,7 +17,7 @@
 			"ADD_PRODUCTS": "הוסף מוצרים",
 			"REMOVE_PRODUCTS": "הסר מוצרים",
 			"CANCEL_ORDER": "בטל הזמנה",
-			"THE_ORDER_IS_CANCEL": "ההזמנה בוטלה",
+			"THE_ORDER_IS_CANCELED": "ההזמנה בוטלה",
 			"THE_ORDER_IS_GIVEN_TO_CARRIER": "ההזמנה ניתנת למוביל.",
 			"THE_ORDER_IS_DELIVERED": "ההזמנה מסופקת.",
 			"ADD_PRODUCTS_MODAL": "הוסף מוצרים",
