--- a/packages/admin-web-angular/src/assets/i18n/bg-BG.json
+++ b/packages/admin-web-angular/src/assets/i18n/bg-BG.json
@@ -17,7 +17,7 @@
 			"ADD_PRODUCTS": "Добавете продукти",
 			"REMOVE_PRODUCTS": "Премахване на продуктите",
 			"CANCEL_ORDER": "Отмяна на поръчката",
-			"THE_ORDER_IS_CANCEL": "Поръчката е отменена",
+			"THE_ORDER_IS_CANCELED": "Поръчката е отменена",
 			"THE_ORDER_IS_GIVEN_TO_CARRIER": "Поръчката се дава на превозвача.",
 			"THE_ORDER_IS_DELIVERED": "Поръчката е доставена.",
 			"ADD_PRODUCTS_MODAL": "Добавяне на продукти",
@@ -565,7 +565,7 @@
 			"AVAILABILITY": "Наличност",
 			"TYPE": "Тип",
 			"DELIVERY": "Доставка",
-			"TAKEAWAY": "За вкъщи"			
+			"TAKEAWAY": "За вкъщи"
 		},
 		"NEW_PRODUCT_TYPE": "Нов тип продукт",
 		"ADD_PRODUCTS": "Добавяне на продукти",
