--- a/packages/merchant-tablet-ionic/src/assets/i18n/es-ES.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/es-ES.json
@@ -466,5 +466,9 @@
 	},
 	"NO_SERVER_VIEW": {
 		"NO_SERVER": "Sin conexión con el Servidor."
+	},
+	"PROMOTIONS": {
+		"PROMO_PRICE": "Precio promocional",
+		"NO_PROMOTIONS": "No hay promociones"
 	}
 }
