--- a/packages/merchant-tablet-ionic/src/assets/i18n/en.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/en.json
@@ -459,5 +459,9 @@
 	},
 	"NO_SERVER_VIEW": {
 		"NO_SERVER": "Server connection is lost"
+	},
+	"PROMOTIONS": {
+		"PROMO_PRICE": "Promo price",
+		"NO_PROMOTIONS": "No Promotions"
 	}
 }
