--- a/packages/merchant-tablet-ionic/src/assets/i18n/he-IL.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/he-IL.json
@@ -466,5 +466,9 @@
 	},
 	"NO_SERVER_VIEW": {
 		"NO_SERVER": "השרת נפל"
+	},
+	"PROMOTIONS": {
+		"PROMO_PRICE": "מחיר פרומו",
+		"NO_PROMOTIONS": "אין מבצעים"
 	}
 }
