--- a/packages/merchant-tablet-ionic/src/assets/i18n/ru-RU.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/ru-RU.json
@@ -466,5 +466,9 @@
 	},
 	"NO_SERVER_VIEW": {
 		"NO_SERVER": "Сервер упал"
+	},
+	"PROMOTIONS": {
+		"PROMO_PRICE": "Промо цена",
+		"NO_PROMOTIONS": "Нет Акции"
 	}
 }
