--- a/packages/merchant-tablet-ionic/src/assets/i18n/es-ES.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/es-ES.json
@@ -172,6 +172,7 @@
 		},
 		"PROMOTIONS": {
 			"PROMOTIONS": "Promociones",
+			"NO_PROMOTIONS": "Sin promociones",
 			"BASIC_INFO": "Información básica",
 			"TITLE": "Título",
 			"ACTIVE_FROM": "Activa desde",
