--- a/packages/merchant-tablet-ionic/src/assets/i18n/ru-RU.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/ru-RU.json
@@ -170,6 +170,7 @@
 		},
 		"PROMOTIONS": {
 			"PROMOTIONS": "Акции",
+			"NO_PROMOTIONS": "Нет рекламных акций",
 			"BASIC_INFO": "Базовая информация",
 			"TITLE": "Заглавие",
 			"ACTIVE_FROM": "Активный от",
