--- a/packages/admin-web-angular/src/assets/i18n/he.json
+++ b/packages/admin-web-angular/src/assets/i18n/he.json
@@ -462,7 +462,7 @@
 			"EDIT": "Edit",
 			"ZONE_NAME": "Zone name",
 			"UNALLOWED_ORDER_CANCELATION": "Unallowed Order Cancelation",
-			"IN_STORE_MODE": "In Store mode",
+			"IN_STORE_MODE": "In-store mode",
 			"ORDER_CANCELATION_OPTIONS": {
 				"ORDERING": "After Ordering",
 				"START_PROCESSING": "After Start Processing",
