feat: translate pending status

--- a/packages/shop-mobile-ionic/src/assets/i18n/bg-BG.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/bg-BG.json
@@ -248,6 +248,7 @@
 	"FAILED": "Се провали",
 	"CANCELED": "Отменен",
 	"IN_DELIVERY": "При доставка",
+	"PENDING": "В очакване",
 	"COMPLETED": "Завършен",
 	"BROWSE": "РАЗГЛЕДАЙ",
 	"ENGLISH": "Английски",
