--- a/packages/shop-mobile-ionic/src/assets/i18n/en-US.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/en-US.json
@@ -248,6 +248,7 @@
 	"FAILED": "Failed",
 	"CANCELED": "Canceled",
 	"IN_DELIVERY": "In Delivery",
+	"PENDING": "Pending",
 	"COMPLETED": "Completed",
 	"BROWSE": "Browse",
 	"ENGLISH": "English",
