--- a/packages/shop-mobile-ionic/src/assets/i18n/es-ES.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/es-ES.json
@@ -248,6 +248,7 @@
 	"FAILED": "Error",
 	"CANCELED": "Cancelado",
 	"IN_DELIVERY": "En viaje",
+	"PENDING": "Pendiente",
 	"COMPLETED": "Completado",
 	"LOCATION_NOTES": "Notas de ubicación",
 	"ENTER_NOTES_HERE": "Introduce notas aquí"
