--- a/packages/shop-mobile-ionic/src/assets/i18n/he-IL.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/he-IL.json
@@ -241,6 +241,7 @@
 	"FAILED": "נכשל",
 	"CANCELED": "מבוטל",
 	"IN_DELIVERY": "במשלוח",
+	"PENDING": "ממתין ל",
 	"COMPLETED": "הושלם",
 	"BROWSE": "לְדַפדֵף",
 	"ENGLISH": "אנגלית",
