--- a/packages/shop-mobile-ionic/src/assets/i18n/ru-RU.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/ru-RU.json
@@ -240,6 +240,7 @@
 	"FAILED": "Не удалось",
 	"CANCELED": "Отменен",
 	"IN_DELIVERY": "В доставке",
+	"PENDING": "В ожидании",
 	"COMPLETED": "Завершенный",
 	"BROWSE": "ПРОСМАТРИВАТЬ",
 	"ENGLISH": "Английский",
