fix: order info

--- a/packages/shop-mobile-ionic/src/assets/i18n/bg-BG.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/bg-BG.json
@@ -94,6 +94,7 @@
 				}
 			]
 		},
+		"VIEW_ORDER_PRODUCTS": "Преглед на продукти за поръчка",
 		"STATUSES": [
 			{
 				"TITLE": "Подготвяме поръчката!",
