--- a/packages/shop-mobile-ionic/src/assets/i18n/en-US.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/en-US.json
@@ -94,6 +94,8 @@
 				}
 			]
 		},
+
+		"VIEW_ORDER_PRODUCTS": "View Order Products",
 		"STATUSES": [
 			{
 				"TITLE": "We're preparing the order!",
