--- a/packages/shop-mobile-ionic/src/assets/i18n/es-ES.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/es-ES.json
@@ -94,6 +94,7 @@
 				}
 			]
 		},
+		"VIEW_ORDER_PRODUCTS": "Ver productos de pedido",
 		"STATUSES": [
 			{
 				"TITLE": "¡Estamos preparando el pedido!",
