--- a/packages/shop-mobile-ionic/src/assets/i18n/ru-RU.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/ru-RU.json
@@ -87,6 +87,7 @@
 				}
 			]
 		},
+		"VIEW_ORDER_PRODUCTS": "Посмотреть продукты для заказа",
 		"STATUSES": [
 			{
 				"TITLE": "Мы готовим Ваш заказ!",
