feat: shop order product comment in admin app

--- a/packages/admin-web-angular/src/assets/i18n/es-ES.json
+++ b/packages/admin-web-angular/src/assets/i18n/es-ES.json
@@ -29,7 +29,8 @@
 				"NAME": "Nombre",
 				"QTY": "Cantidad",
 				"PRICE": "Precio",
-				"IMAGE": "Imagen"
+				"IMAGE": "Imagen",
+				"COMMENT": "Comentario"
 			}
 		},
 		"ORDER_SIDEBAR": {
