--- a/packages/admin-web-angular/src/assets/i18n/he-IL.json
+++ b/packages/admin-web-angular/src/assets/i18n/he-IL.json
@@ -28,7 +28,8 @@
 				"NAME": "שם",
 				"QTY": "QTY",
 				"PRICE": "מחיר",
-				"IMAGE": "תמונה"
+				"IMAGE": "תמונה",
+				"COMMENT": "תגובה"
 			}
 		},
 		"ORDER_SIDEBAR": {
