--- a/packages/admin-web-angular/src/assets/i18n/ru.json
+++ b/packages/admin-web-angular/src/assets/i18n/ru.json
@@ -28,7 +28,8 @@
 				"NAME": "Наименование",
 				"QTY": "Кол-во",
 				"PRICE": "Цена",
-				"IMAGE": "Изображение"
+				"IMAGE": "Изображение",
+				"COMMENT": "Комментарий"
 			}
 		},
 		"ORDER_SIDEBAR": {
