--- a/packages/admin-web-angular/src/assets/i18n/bg-BG.json
+++ b/packages/admin-web-angular/src/assets/i18n/bg-BG.json
@@ -28,7 +28,8 @@
 				"NAME": "Име",
 				"QTY": "КОЛ",
 				"PRICE": "Цена",
-				"IMAGE": "Изображение"
+				"IMAGE": "Изображение",
+				"COMMENT": "Коментар"
 			}
 		},
 		"ORDER_SIDEBAR": {
