--- a/packages/admin-web-angular/src/assets/i18n/en.json
+++ b/packages/admin-web-angular/src/assets/i18n/en.json
@@ -28,7 +28,8 @@
 				"NAME": "Name",
 				"QTY": "QTY",
 				"PRICE": "Price",
-				"IMAGE": "Image"
+				"IMAGE": "Image",
+				"COMMENT": "Comment"
 			}
 		},
 		"ORDER_SIDEBAR": {
