--- a/packages/admin-web-angular/src/assets/i18n/ru-RU.json
+++ b/packages/admin-web-angular/src/assets/i18n/ru-RU.json
@@ -28,7 +28,8 @@
 				"NAME": "Название",
 				"QTY": "КОЛ",
 				"PRICE": "Цена",
-				"IMAGE": "Образ"
+				"IMAGE": "Образ",
+				"COMMENT": "Комментарий"
 			}
 		},
 		"ORDER_SIDEBAR": {
