feat: add comment on order product from admin app

--- a/packages/admin-web-angular/src/assets/i18n/bg-BG.json
+++ b/packages/admin-web-angular/src/assets/i18n/bg-BG.json
@@ -981,7 +981,8 @@
 						"PRODUCT": "Продукт",
 						"PRICE": "Цена",
 						"AVAILABLE": "Налично",
-						"AMOUNT": "Количество"
+						"AMOUNT": "Количество",
+						"COMMENT": "Коментар"
 					}
 				}
 			}
