--- a/packages/admin-web-angular/src/assets/i18n/en-US.json
+++ b/packages/admin-web-angular/src/assets/i18n/en-US.json
@@ -996,7 +996,8 @@
 						"PRODUCT": "Product",
 						"PRICE": "Price",
 						"AVAILABLE": "Available",
-						"AMOUNT": "Amount"
+						"AMOUNT": "Amount",
+						"COMMENT": "Comment"
 					}
 				}
 			}
