--- a/packages/admin-web-angular/src/assets/i18n/es-ES.json
+++ b/packages/admin-web-angular/src/assets/i18n/es-ES.json
@@ -986,7 +986,8 @@
 						"PRODUCT": "Producto",
 						"PRICE": "Precio",
 						"AVAILABLE": "Disponible",
-						"AMOUNT": "Cantidad"
+						"AMOUNT": "Cantidad",
+						"COMMENT": "Comentario"
 					}
 				}
 			}
