--- a/packages/admin-web-angular/src/assets/i18n/he.json
+++ b/packages/admin-web-angular/src/assets/i18n/he.json
@@ -995,7 +995,8 @@
 						"PRODUCT": "Product",
 						"PRICE": "Price",
 						"AVAILABLE": "Available",
-						"AMOUNT": "Amount"
+						"AMOUNT": "Amount",
+						"COMMENT": "תגובה"
 					}
 				}
 			}
