--- a/packages/admin-web-angular/src/assets/i18n/ru.json
+++ b/packages/admin-web-angular/src/assets/i18n/ru.json
@@ -995,7 +995,8 @@
 						"PRODUCT": "Товар",
 						"PRICE": "Цена",
 						"AVAILABLE": "Доступно",
-						"AMOUNT": "Сумма"
+						"AMOUNT": "Сумма",
+						"COMMENT": "Комментарий"
 					}
 				}
 			}
