--- a/packages/admin-web-angular/src/assets/i18n/he-IL.json
+++ b/packages/admin-web-angular/src/assets/i18n/he-IL.json
@@ -981,7 +981,8 @@
 						"PRODUCT": "מוצר",
 						"PRICE": "מחיר",
 						"AVAILABLE": "זמין",
-						"AMOUNT": "כמות"
+						"AMOUNT": "כמות",
+						"COMMENT": "תגובה"
 					}
 				}
 			}
