--- a/packages/admin-web-angular/src/assets/i18n/ru-RU.json
+++ b/packages/admin-web-angular/src/assets/i18n/ru-RU.json
@@ -981,7 +981,8 @@
 						"PRODUCT": "Продукт",
 						"PRICE": "Цена",
 						"AVAILABLE": "Доступный",
-						"AMOUNT": "Количество"
+						"AMOUNT": "Количество",
+						"COMMENT": "Комментарий"
 					}
 				}
 			}
