feat: french lang support | carrier-mobile-ionic

--- a/packages/carrier-mobile-ionic/src/assets/i18n/en.json
+++ b/packages/carrier-mobile-ionic/src/assets/i18n/en.json
@@ -76,7 +76,8 @@
 		"BULGARIAN": "Bulgarian",
 		"HEBREW": "Hebrew",
 		"RUSSIAN": "Rusian",
-		"SPANISH": "Spanish"
+		"SPANISH": "Spanish",
+		"French": "French"
 	},
 	"LIST_VIEW": {
 		"YOU_NAVIGATED_HERE_FROM": "You navigated here from"
