feat: french lang support | admin-web-angular

--- a/packages/admin-web-angular/src/assets/i18n/bg-BG.json
+++ b/packages/admin-web-angular/src/assets/i18n/bg-BG.json
@@ -1118,7 +1118,8 @@
 	"HEBREW": "Иврит",
 	"RUSSIAN": "Руски",
 	"BULGARIAN": "Български",
-	"SPANISH": "Spanish",
+	"SPANISH": "испански",
+	"FRENCH": "Френски",
 	"SELECT": "Изберете",
 	"Name": "Име",
 	"Id": "Идент. номер",
