--- a/packages/admin-web-angular/src/assets/i18n/bg.json
+++ b/packages/admin-web-angular/src/assets/i18n/bg.json
@@ -1132,7 +1132,8 @@
 	"HEBREW": "Hebrew",
 	"RUSSIAN": "Russian",
 	"BULGARIAN": "Bulgarian",
-	"SPANISH": "Spanish",
+	"SPANISH": "испански",
+	"FRENCH": "Френски",
 	"SELECT": "Select",
 	"Name": "Name",
 	"Id": "Id",
