--- a/packages/admin-web-angular/src/assets/i18n/en-US.json
+++ b/packages/admin-web-angular/src/assets/i18n/en-US.json
@@ -1134,6 +1134,7 @@
 	"RUSSIAN": "Russian",
 	"BULGARIAN": "Bulgarian",
 	"SPANISH": "Spanish",
+	"FRENCH": "French",
 	"SELECT": "Select",
 	"Name": "Name",
 	"Id": "Id",
