--- a/packages/admin-web-angular/src/assets/i18n/en.json
+++ b/packages/admin-web-angular/src/assets/i18n/en.json
@@ -1133,6 +1133,7 @@
 	"RUSSIAN": "Russian",
 	"BULGARIAN": "Bulgarian",
 	"SPANISH": "Spanish",
+	"FRENCH": "French",
 	"SELECT": "Select",
 	"Name": "Name",
 	"Id": "Id",
