--- a/packages/admin-web-angular/src/assets/i18n/es-ES.json
+++ b/packages/admin-web-angular/src/assets/i18n/es-ES.json
@@ -1124,6 +1124,8 @@
 	"RUSSIAN": "Ruso",
 	"BULGARIAN": "Búlgaro",
 	"ESPAÑOL": "Español",
+	"SPANISH": "Español",
+	"FRENCH": "Francés",
 	"SELECT": "Seleccionar",
 	"Name": "Nombre",
 	"Id": "Id",
