--- a/packages/admin-web-angular/src/assets/i18n/he-IL.json
+++ b/packages/admin-web-angular/src/assets/i18n/he-IL.json
@@ -1118,7 +1118,8 @@
 	"HEBREW": "עִברִית",
 	"RUSSIAN": "רוּסִי",
 	"BULGARIAN": "בולגרית",
-	"SPANISH": "Spanish",
+	"SPANISH": "ספרדית",
+	"FRENCH": "צָרְפָתִית",
 	"SELECT": "בחר",
 	"Name": "שֵׁם",
 	"Id": "תְעוּדַת זֶהוּת",
