--- a/packages/admin-web-angular/src/assets/i18n/ru-RU.json
+++ b/packages/admin-web-angular/src/assets/i18n/ru-RU.json
@@ -1119,6 +1119,7 @@
 	"RUSSIAN": "Русский",
 	"BULGARIAN": "Болгарский",
 	"SPANISH": "Испанский",
+	"FRENCH": "Французский",
 	"SELECT": "Выбрать",
 	"Name": "Имя",
 	"Id": "Id",
