--- a/packages/admin-web-angular/src/assets/i18n/ru.json
+++ b/packages/admin-web-angular/src/assets/i18n/ru.json
@@ -1133,6 +1133,7 @@
 	"RUSSIAN": "Русский",
 	"BULGARIAN": "Болгарский",
 	"SPANISH": "Испанский",
+	"FRENCH": "Французский",
 	"SELECT": "Выбрать",
 	"Name": "Наименование",
 	"Id": "Id",
