feat: french lang support |  carrier-mobile-ionic

--- a/packages/carrier-mobile-ionic/src/assets/i18n/bg.json
+++ b/packages/carrier-mobile-ionic/src/assets/i18n/bg.json
@@ -76,7 +76,8 @@
 		"BULGARIAN": "Български",
 		"HEBREW": "Иврит",
 		"RUSSIAN": "Руски",
-		"SPANISH": "Испански"
+		"SPANISH": "Испански",
+		"FRENCH": "Френски"
 	},
 	"LIST_VIEW": {
 		"YOU_NAVIGATED_HERE_FROM": "От тук сте навигирали"
