--- a/packages/carrier-mobile-ionic/src/assets/i18n/es.json
+++ b/packages/carrier-mobile-ionic/src/assets/i18n/es.json
@@ -76,7 +76,8 @@
 		"BULGARIAN": "Bulgaro",
 		"HEBREW": "Hebreo",
 		"RUSSIAN": "Ruso",
-		"ESPAÑOL": "Español"
+		"ESPAÑOL": "Español",
+		"FRENCH": "Francés"
 	},
 	"LIST_VIEW": {
 		"YOU_NAVIGATED_HERE_FROM": "Usted llegó acá desde"
