--- a/packages/carrier-mobile-ionic/src/assets/i18n/fr.json
+++ b/packages/carrier-mobile-ionic/src/assets/i18n/fr.json
@@ -77,7 +77,7 @@
 		"HEBREW": "Hebrew",
 		"RUSSIAN": "Russe",
 		"SPANISH": "Spanish",
-		"French": "Français"
+		"FRENCH": "Français"
 	},
 	"LIST_VIEW": {
 		"YOU_NAVIGATED_HERE_FROM": "You navigated here from"
