--- a/packages/carrier-mobile-ionic/src/assets/i18n/he.json
+++ b/packages/carrier-mobile-ionic/src/assets/i18n/he.json
@@ -76,7 +76,8 @@
 		"BULGARIAN": "בולגרית",
 		"HEBREW": "עברית",
 		"RUSSIAN": "רוסית",
-		"SPANISH": "ספרדית"
+		"SPANISH": "ספרדית",
+		"FRENCH": "צָרְפָתִית"
 	},
 	"LIST_VIEW": {
 		"YOU_NAVIGATED_HERE_FROM": "אתה מנווט כאן מ"
