--- a/packages/carrier-mobile-ionic/src/assets/i18n/ru.json
+++ b/packages/carrier-mobile-ionic/src/assets/i18n/ru.json
@@ -76,7 +76,8 @@
 		"BULGARIAN": "Болгарский",
 		"HEBREW": "Иврит",
 		"RUSSIAN": "Русский",
-		"SPANISH": "Испанский"
+		"SPANISH": "Испанский",
+		"FRENCH": "Французский"
 	},
 	"LIST_VIEW": {
 		"YOU_NAVIGATED_HERE_FROM": "Вы перешли сюда из"
