--- a/packages/merchant-tablet-ionic/src/assets/i18n/es-ES.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/es-ES.json
@@ -326,6 +326,8 @@
 			"RUSSIAN": "Ruso",
 			"BULGARIAN": "Bulgaro",
 			"ESPAÑOL": "Español",
+			"SPANISH": "Español",
+			"FRENCH": "Francés",
 			"OPTIONAL": "Opcional",
 			"TAKEAWAY": "Retirar",
 			"DELIVERY": "Repartir",
@@ -403,6 +405,7 @@
 		"BULGARIAN": "Bulgaro",
 		"ESPAÑOL": "Español",
 		"SPANISH": "Español",
+		"FRENCH": "Francés",
 		"OPTIONAL": "Opcional"
 	},
 	"ORDER_CANCELED_COMPONENT": {
