--- a/packages/merchant-tablet-ionic/src/assets/i18n/ru-RU.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/ru-RU.json
@@ -322,6 +322,8 @@
 			"HEBREW": "Иврит",
 			"RUSSIAN": "Русский",
 			"BULGARIAN": "Болгарский",
+			"SPANISH": "Испанский",
+			"FRENCH": "Французский",
 			"OPTIONAL": "необязательный",
 			"TAKEAWAY": "Навынос",
 			"DELIVERY": "Доставка",
@@ -393,7 +395,8 @@
 		"HEBREW": "Иврит",
 		"RUSSIAN": "Русский",
 		"BULGARIAN": "Болгарский",
-		"SPANISH": "Испанский"
+		"SPANISH": "Испанский",
+		"FRENCH": "Французский"
 	},
 	"ORDER_CANCELED_COMPONENT": {
 		"CANCELED": "отменен",
