--- a/packages/merchant-tablet-ionic/src/assets/i18n/en.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/en.json
@@ -324,6 +324,8 @@
 			"HEBREW": "Hebrew",
 			"RUSSIAN": "Russian",
 			"BULGARIAN": "Bulgarian",
+			"SPANISH": "Spanish",
+			"FRENCH": "French",
 			"OPTIONAL": "optional",
 			"TAKEAWAY": "Takeaway",
 			"DELIVERY": "Delivery",
@@ -396,6 +398,7 @@
 		"RUSSIAN": "Russian",
 		"BULGARIAN": "Bulgarian",
 		"SPANISH": "Spanish",
+		"FRENCH": "French",
 		"OPTIONAL": "optional"
 	},
 	"ORDER_CANCELED_COMPONENT": {
