feat: french & spanish lang support | shop-mobile-ionic

--- a/packages/shop-mobile-ionic/src/assets/i18n/bg-BG.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/bg-BG.json
@@ -256,6 +256,8 @@
 	"HEBREW": "Иврит",
 	"RUSSIAN": "Руски",
 	"BULGARIAN": "Български",
+	"SPANISH": "испански",
+	"FRENCH": "Френски",
 	"SELECT": "Изберете",
 	"LOCATION_NOTES": "Бележки за местоположението",
 	"ENTER_NOTES_HERE": "Въведете бележки тук"
