--- a/packages/shop-mobile-ionic/src/assets/i18n/en-US.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/en-US.json
@@ -258,6 +258,7 @@
 	"RUSSIAN": "Russian",
 	"BULGARIAN": "Bulgarian",
 	"SPANISH": "Spanish",
+	"FRENCH": "French",
 	"SELECT": "Select",
 	"LOCATION_NOTES": "Location Notes",
 	"ENTER_NOTES_HERE": "Enter notes here"
