--- a/packages/shop-mobile-ionic/src/assets/i18n/es-ES.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/es-ES.json
@@ -5,6 +5,7 @@
 	"RUSSIAN": "Ruso",
 	"BULGARIAN": "Búlgaro",
 	"SPANISH": "Español",
+	"FRENCH": "Francés",
 	"SELECT": "Seleccione",
 	"LANGUAGE": {
 		"ID": "es-ES",
