--- a/packages/shop-mobile-ionic/src/assets/i18n/he-IL.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/he-IL.json
@@ -249,6 +249,8 @@
 	"HEBREW": "עִברִית",
 	"RUSSIAN": "רוּסִי",
 	"BULGARIAN": "בולגרית",
+	"SPANISH": "ספרדית",
+	"FRENCH": "צָרְפָתִית",
 	"SELECT": "בחר",
 	"LOCATION_NOTES": "הערות מיקום",
 	"ENTER_NOTES_HERE": "הזן הערות כאן"
