--- a/packages/shop-mobile-ionic/src/assets/i18n/ru-RU.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/ru-RU.json
@@ -248,6 +248,8 @@
 	"HEBREW": "Иврит",
 	"RUSSIAN": "Русский",
 	"BULGARIAN": "Болгарский",
+	"SPANISH": "Испанский",
+	"FRENCH": "Французский",
 	"SELECT": "Выбрать",
 	"LOCATION_NOTES": "Примечания о местонахождении",
 	"ENTER_NOTES_HERE": "Введите примечания здесь"
